--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,33 @@
 <html>
+<head>
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta charset='utf-8' />
+	<meta name='viewport' content='width=device-width, user-scalable=no' />
+	<title></title>
+	<style type='text/css'>
+		body {
+			touch-action: none;
+			margin: 0;
+			border: 0 none;
+			padding: 0;
+			text-align: center;
+			background-color: black;
+		}
+
+		#hitboxCanvas {
+			display: block;
+			margin: 0;
+			color: white;
+		}
+
+		#hitboxCanvas:focus {
+			outline: none;
+		}
+
+
+	</style>
+
+</head>
 	<body style="background: #222; margin: 0;">
 		<div style="width: 100%; height: 100%; background: black;">
 			<canvas id="hitboxCanvas" style="width: 100%; height: 100%; background: black;"></canvas>
