--- a/client/index.html
+++ b/client/index.html
@@ -24,13 +24,19 @@
 			outline: none;
 		}
 
-
+		textarea {
+			height: 100vh;
+		}
 	</style>
 
 </head>
 	<body style="background: #222; margin: 0;">
-		<div style="width: 100%; height: 100%; background: black;">
-			<canvas id="hitboxCanvas" style="width: 100%; height: 100%; background: black;"></canvas>
+		<div style="display: flex;">
+			<div style="display: flex; width: 100%; height: 100%; background: black;">
+				<canvas id="hitboxCanvas" style="width: 100%; height: 100%; background: black;"></canvas>
+			</div>
+			<!-- Uncomment the element below to enable log view -->
+			<!-- <textarea id="log"></textarea> -->
 		</div>
 	</body>
 </html>
