--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -36,7 +36,7 @@
 				<canvas id="hitboxCanvas" style="width: 100%; height: 100%; background: black;"></canvas>
 			</div>
 			<!-- Uncomment the element below to enable log view -->
-			<!-- <textarea id="log"></textarea> -->
+			<textarea id="log"></textarea>
 		</div>
 	</body>
 </html>
