--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -63,5 +63,6 @@
 		</div>
 	</body>
 </html>
+<script type="text/javascript" src="lib/canvasImage.js"></script>
 <script type="text/javascript" src="lib/logger.js"></script>
 <script type="text/javascript" src="index.js"></script>
