Refactor: Create PadState class

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -65,4 +65,5 @@
 </html>
 <script type="text/javascript" src="lib/canvasImage.js"></script>
 <script type="text/javascript" src="lib/logger.js"></script>
+<script type="text/javascript" src="lib/padState.js"></script>
 <script type="text/javascript" src="index.js"></script>
