--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -18,7 +18,7 @@
 			display: flex;
 		}
 
-		#canvasParentDiv {
+		#canvasGuide {
 			width: 100%;
 			height: 100vh;
 			position: relative;
@@ -54,7 +54,7 @@
 </head>
 	<body>
 		<div id="container">
-			<div id="canvasParentDiv">
+			<div id="canvasGuide">
 				<canvas id="hitboxCanvas"></canvas>
 				<canvas id="overlayCanvas"></canvas>
 			</div>
