Rename hitbox -> section

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -24,7 +24,7 @@
 			height: 100vh;
 		}
 
-		#hitboxCanvas:focus {
+		#sectionCanvas:focus {
 			outline: none;
 		}
 
@@ -49,7 +49,7 @@
 	<body>
 		<div id="container">
 			<div id="canvasGuide">
-				<canvas id="hitboxCanvas" class="canvas"></canvas>
+				<canvas id="sectionCanvas" class="canvas"></canvas>
 				<canvas id="graphicCanvas" class="canvas passthrough"></canvas>
 				<canvas id="overlayCanvas" class="canvas passthrough"></canvas>
 			</div>
