Log server events for testing

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -54,7 +54,7 @@
 				<canvas id="overlayCanvas" class="canvas passthrough"></canvas>
 			</div>
 			<!-- Uncomment the element below to enable log view -->
-			<!-- <textarea id="log"></textarea> -->
+			<textarea id="log"></textarea>
 		</div>
 	</body>
 </html>
