--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -59,7 +59,4 @@
 	</body>
 </html>
 
-<script type="text/javascript" src="lib/logger.js"></script>
-<script type="text/javascript" src="lib/canvasImage.js"></script>
-<script type="text/javascript" src="lib/padState.js"></script>
-<script type="text/javascript" src="index.js"></script>
+<script type="module" src="index.js"></script>
