--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -3,7 +3,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
-	<title></title>
+	<title>Mobile Controller</title>
 	<style type='text/css'>
 		body {
 			touch-action: none;
