webmanifest and favicon

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -1,8 +1,20 @@
 <html>
 <head>
+	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	
+	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="application-name" content="MobControl">
+	<meta name="apple-mobile-web-app-title" content="MobControl">
+	<meta name="msapplication-starturl" content="/">
 	<meta charset='utf-8' />
-	<meta name='viewport' content='width=device-width, user-scalable=no' />
+	<meta name='viewport' content='width=device-width, user-scalable=no' /> <!-- might also need  initial-scale=1, shrink-to-fit=no -->
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
 	<title>Mobile Controller</title>
 	<style type='text/css'>
 		body {
