#9 Client sends Player/Colour change requests

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -114,76 +114,31 @@
 					<p class="lead" style="opacity: 30%;">This is the settings page. Flip to landscape to show the pad.</p>
 
 					<div class="col-md-8 order-md-1">
-							<div class="spacer"></div>
-							<div class="row">
-								<label for="username">What's your name?</label>
-								<div class="input-group">
-									<input type="text" class="form-control" placeholder="Player">
-									<div class="input-group-append">
-										<button type="submit" class="btn btn-secondary">Set</button>
-									</div>
-								</div>
+						<div class="spacer"></div>
+						<div class="row">
+							<label for="username">What's your name?</label>
+							<input type="text" class="form-control" placeholder="Player" id="name">
+						</div>
+
+						<div class="spacer"></div>
+
+						<div class="row">
+							<label for="username">Primary colour</label>
+							<input type="text" class="form-control" placeholder="" style="background-color: transparent;" id="colour1Swatch">
+							<div style="display: flex; flex-wrap: wrap;" id="colour1SelectButtons">
+								<div class="colour-select" style="background-color: WHITE"></div>
 							</div>
+						</div>
 
-							<div class="spacer"></div>
+						<div class="spacer"></div>
 
-							<div class="row">
-								<label for="username">Primary colour</label>
-								<div class="input-group">
-									<input type="text" class="form-control" placeholder="" style="background-color: YELLOW;">
-									<div class="input-group-append">
-										<button type="submit" class="btn btn-secondary">Set</button>
-									</div>
-								</div>
-								<div style="display: flex; flex-wrap: wrap;">
-									<div class="colour-select" style="background-color: WHITE"></div>
-									<div class="colour-select" style="background-color: SILVER"></div>
-									<div class="colour-select" style="background-color: GRAY"></div>
-									<div class="colour-select" style="background-color: BLACK"></div>
-									<div class="colour-select" style="background-color: RED"></div>
-									<div class="colour-select" style="background-color: MAROON"></div>
-									<div class="colour-select" style="background-color: YELLOW"></div>
-									<div class="colour-select" style="background-color: OLIVE"></div>
-									<div class="colour-select" style="background-color: LIME"></div>
-									<div class="colour-select" style="background-color: GREEN"></div>
-									<div class="colour-select" style="background-color: AQUA"></div>
-									<div class="colour-select" style="background-color: TEAL"></div>
-									<div class="colour-select" style="background-color: BLUE"></div>
-									<div class="colour-select" style="background-color: NAVY"></div>
-									<div class="colour-select" style="background-color: FUCHSIA"></div>
-									<div class="colour-select" style="background-color: PURPLE"></div>
-								</div>
+						<div class="row">
+							<label for="username">Secondary colour</label>
+							<input type="text" class="form-control" placeholder="" style="background-color: transparent;" id="colour2Swatch">
+							<div style="display: flex; flex-wrap: wrap;" id="colour2SelectButtons">
+								<div class="colour-select" style="background-color: WHITE"></div>
 							</div>
-
-							<div class="spacer"></div>
-
-							<div class="row">
-								<label for="username">Secondary colour</label>
-								<div class="input-group">
-									<input type="text" class="form-control" placeholder="" style="background-color: NAVY;">
-									<div class="input-group-append">
-										<button type="submit" class="btn btn-secondary">Set</button>
-									</div>
-								</div>
-								<div style="display: flex; flex-wrap: wrap;">
-									<div class="colour-select" style="background-color: WHITE"></div>
-									<div class="colour-select" style="background-color: SILVER"></div>
-									<div class="colour-select" style="background-color: GRAY"></div>
-									<div class="colour-select" style="background-color: BLACK"></div>
-									<div class="colour-select" style="background-color: RED"></div>
-									<div class="colour-select" style="background-color: MAROON"></div>
-									<div class="colour-select" style="background-color: YELLOW"></div>
-									<div class="colour-select" style="background-color: OLIVE"></div>
-									<div class="colour-select" style="background-color: LIME"></div>
-									<div class="colour-select" style="background-color: GREEN"></div>
-									<div class="colour-select" style="background-color: AQUA"></div>
-									<div class="colour-select" style="background-color: TEAL"></div>
-									<div class="colour-select" style="background-color: BLUE"></div>
-									<div class="colour-select" style="background-color: NAVY"></div>
-									<div class="colour-select" style="background-color: FUCHSIA"></div>
-									<div class="colour-select" style="background-color: PURPLE"></div>
-								</div>
-							</div>
+						</div>
 					</div>
 				</div>
 			</div>
