--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -139,6 +139,13 @@
 								<div class="colour-select" style="background-color: WHITE"></div>
 							</div>
 						</div>
+
+						<div class="spacer"></div>
+
+						<div class="row">
+							<label for="customRange1">Analogue stick sensitivity</label>
+							<input type="range" class="custom-range" id="stickSensitivity">
+						</div>
 					</div>
 				</div>
 			</div>
