fixes for iphone SE small screen

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -14,7 +14,7 @@
 	<meta name="apple-mobile-web-app-title" content="MobControl">
 	<meta name="msapplication-starturl" content="/">
 	<meta charset='utf-8' />
-	<meta name='viewport' content='width=device-width, user-scalable=no' /> <!-- might also need  initial-scale=1, shrink-to-fit=no -->
+	<meta name='viewport' content='user-scalable=no' />  <!--might also need:  user-scalable=no,   initial-scale=1, shrink-to-fit=no, width=device-width -->
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 
