--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -101,7 +101,7 @@
 
 </head>
 	<body>
-		<div id="pageContainer" class="guide vStretch">
+		<div class="guide vStretch">
 			<!--
 				####################################################################################
 				#
