Implement buttons on pad+settings pages to toggle between each other

--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -111,7 +111,7 @@
 			-->
 			<div id="setPage" class="follower bg-dark">
 				<div class="container" style="display: block;">
-					<p class="lead" style="opacity: 30%;">This is the settings page. Flip to landscape to show the pad.</p>
+					<button id="showPadButton">Show Pad</button>
 
 					<div class="col-md-8 order-md-1">
 						<div class="spacer"></div>
