--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -111,7 +111,8 @@
 			-->
 			<div id="setPage" class="follower bg-dark">
 				<div class="container" style="display: block;">
-					<button id="showPadButton">Show Pad</button>
+					<button id="showPadButton1">Show Pad 1</button>
+					<button id="showPadButton2">Show Pad 2</button>
 
 					<div class="col-md-8 order-md-1">
 						<div class="spacer"></div>
