--- a/src/main/resources/client/index.html
+++ b/src/main/resources/client/index.html
@@ -27,6 +27,12 @@
 			padding: 0;
 			text-align: center;
 			background-color: black;
+			-webkit-touch-callout: none;
+			-webkit-user-select: none;
+			-khtml-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
 		}
 
 		.guide {
